--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-Perfect! I’ve carefully rechecked your code, fixed all issues, added Vansh personalization, and integrated a day-restriction system so users cannot access future days. Everything else — points, streaks, XP, charts, badges, personal tasks, quotes, and layout — remains exactly the same.
-
-Here’s the final corrected code:
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -122,11 +118,12 @@ function getCurrentDay() {
 // Show current day
 document.getElementById("day-counter").innerText = `Day ${getCurrentDay()} — Vansh’s Daily Planner`;
 
+// Random quote
+document.getElementById("quote").innerText = quotes[Math.floor(Math.random()*quotes.length)];
+
 // ----- Load Tasks -----
 function loadTasks(){
   const currentDay = getCurrentDay();
-  // Only allow loading up to current day
-  const maxAccessibleDay = currentDay;
 
   document.querySelectorAll(".category").forEach(catDiv=>{
     const catName = catDiv.dataset.category;
@@ -135,7 +132,7 @@ function loadTasks(){
     const tasks = taskData[catName]||[];
 
     tasks.forEach((t,i)=>{
-      if(i > maxAccessibleDay) return; // Day restriction
+      if(catName!=="Personal" && i > currentDay) return; // Day restriction
       const taskElem=document.createElement("div");
       taskElem.className="task";
       taskElem.innerHTML=`<input type="checkbox" id="${catName}-${i}"><span>${t.task}</span><button onclick="addReason('${catName}',${i})">Reason ❌</button>`;
@@ -144,7 +141,7 @@ function loadTasks(){
       tasksDiv.appendChild(taskElem);
     });
 
-    // Load Vansh personal tasks (no restriction)
+    // Load Vansh personal tasks
     if(catName==="Personal"){
       const personalSaved = JSON.parse(localStorage.getItem("Vansh-PersonalTasks"))||[];
       personalSaved.forEach(task=>addPersonalTask(task,true));
@@ -173,8 +170,88 @@ function addPersonalTask(taskText,isLoad=false){
   updateProgress(document.querySelector(".category[data-category='Personal']"));
 }
 
+// ----- Checkbox Save -----
+document.addEventListener("change",e=>{
+  if(e.target.type==="checkbox"){
+    const id=e.target.id;
+    const completed=e.target.checked;
+    localStorage.setItem(id, JSON.stringify({completed}));
+    updateAllProgress();
+  }
+});
+
 // ----- Add Reason -----
 function addReason(category,index){
-  const reason=prompt("Why wasn't this task completed?");
-  if
+  const reason = prompt("Why wasn't this task completed?");
+  if(reason){
+    localStorage.setItem(`${category}-${index}-reason`,reason);
+    alert("Reason saved!");
+  }
+}
 
+// ----- Update Progress -----
+function updateProgress(catDiv){
+  const tasks=catDiv.querySelectorAll(".task input[type='checkbox']");
+  let completed=0, points=0;
+  tasks.forEach((t,i)=>{
+    if(t.checked){
+      completed++;
+      const catName = catDiv.dataset.category;
+      const taskPoints = taskData[catName]?.[i]?.points || 1;
+      points += taskPoints;
+    }
+  });
+  const total=tasks.length || 1;
+  const percent = Math.floor((completed/total)*100);
+  catDiv.querySelector(".progress-bar").style.width = percent+"%";
+  catDiv.querySelector(".points-val").innerText = points;
+  catDiv.querySelector(".xp-val").innerText = points;
+  updateAllTotals();
+}
+
+function updateAllProgress(){
+  document.querySelectorAll(".category").forEach(updateProgress);
+}
+
+function updateAllTotals(){
+  let totalPoints=0, totalXP=0;
+  document.querySelectorAll(".category").forEach(cat=>{
+    totalPoints+=parseInt(cat.querySelector(".points-val").innerText) || 0;
+    totalXP+=parseInt(cat.querySelector(".xp-val").innerText) || 0;
+  });
+  document.getElementById("total-points").innerText=totalPoints;
+  document.getElementById("total-xp").innerText=totalXP;
+}
+
+// ----- Initialize -----
+loadTasks();
+
+// ----- Charts -----
+const weeklyChartCtx = document.getElementById('weeklyChart').getContext('2d');
+new Chart(weeklyChartCtx, {
+  type: 'line',
+  data: {
+    labels: ['Mon','Tue','Wed','Thu','Fri','Sat','Sun'],
+    datasets: [{
+      label: 'Points This Week',
+      data: [0,0,0,0,0,0,0],
+      borderColor: '#ffd000',
+      backgroundColor: '#ffd00033',
+      tension:0.3
+    }]
+  },
+  options:{responsive:true, plugins:{legend:{labels:{color:'#ffd000'}}}, scales:{x:{ticks:{color:'#ffd000'}},y:{ticks:{color:'#ffd000'}}}}
+});
+
+const categoryChartCtx = document.getElementById('categoryChart').getContext('2d');
+new Chart(categoryChartCtx,{
+  type:'bar',
+  data:{
+    labels:['Physical','Mental','Wealth','Personal'],
+    datasets:[{label:'XP',data:[0,0,0,0],backgroundColor:'#ffd000'}]
+  },
+  options:{responsive:true, plugins:{legend:{labels:{color:'#ffd000'}}}, scales:{x:{ticks:{color:'#ffd000'}},y:{ticks:{color:'#ffd000'}}}}
+});
+</script>
+</body>
+</html>
